Fixed Overflow in Examiner Page

--- a/css/styles.css
+++ b/css/styles.css
@@ -413,7 +413,7 @@ body {
 
 .btn-pad{
   margin-left: 1rem;
-  margin-top: 2.5rem;
+  margin-top: 1rem;
 }
 
 .qno{
